--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
 		"stddef.h": "c",
 		"stdlib.h": "c",
 		"chessboard.h": "c",
-		"string.h": "c"
+		"string.h": "c",
+		"mystdlib.h": "c",
+		"mystddef.h": "c"
 	}
 }
